# adaptative_vision

./: .gitignore  README.md  adaptive_vs_ws.code-workspace  requirements.txt  run_tests.sh  setup_venv.sh
docs/: math_derivation.md
scripts/: analyze_results.py  plot_realtime.py  sensitivity_analysis.py
src/adaptive_visual_servo/: package.xml  setup.py
src/adaptive_visual_servo/adaptive_visual_servo/: __init__.py  adaptive_jacobian.py  adaptive_vs_controller.py  depth_estimator.py  energy_monitor.py  feature_tracker.py  ibvs_controller.py  target_publisher.py
src/adaptive_visual_servo/config/: controller.yaml  depth.yaml  tracker.yaml
src/adaptive_visual_servo/launch/: benchmark.launch.py  simulation.launch.py
src/adaptive_visual_servo/rviz/: vs_system.rviz
src/adaptive_visual_servo/urdf/: ur5_camera.urdf
src/adaptive_visual_servo/worlds/: vs_arena.world
tests/: test_adaptive_jacobian.py  test_simulation_mock.py
